# amms

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: uniswapv2_simulate.rs
contracts/: foundry.toml  remappings.txt
contracts/src/: GetCLPoolTickBitmap.sol  GetCLPoolTicks.sol  GetCLPoolTicksInRange.sol  GetCLPoolTicksInRangeRequest.sol  GetCamelotV3PoolDataBatchRequest.sol  GetCamelotV3TickDataBatchRequest.sol  GetCurvePoolDataBatchRequest.sol  GetDetailedPoolDataBatchRequest.sol  GetUniV2PoolData.sol  GetUniV3PoolData.sol  GetUniswapV2PoolDataBatchRequest.sol  GetUniswapV3PoolDataBatchRequest.sol  GetVe33PoolData.sol  GetVe33PoolDataBatchRequest.sol  GetVe33PoolsBatchRequest.sol  IAerodromeCLPool.sol  IAerodromePool.sol  ICurvePool.sol  IUniswapV2Pool.sol  IUniswapV3Pool.sol  PoolHelpers.sol  PoolUtils.sol  PositionLens.sol  StorageBatchRequest.sol  SyncCamelotV3PoolBatchRequest.sol  SyncUniswapV3PoolBatchRequest.sol
contracts/test/: GetWethValueInPoolBatchRequest.t.sol
src/: errors.rs  lib.rs  types.rs  utils.rs
src/amm/: factory.rs  mod.rs
src/amm/camelot_v3/: batch_request.rs  factory.rs  mod.rs
src/amm/camelot_v3/batch_request/: GetCamelotV3PoolDataBatchRequestABI.json  GetCamelotV3TickDataBatchRequestABI.json  SyncCamelotV3PoolBatchRequestABI.json  mod.rs
src/amm/common/: mod.rs
src/amm/common/batch_request/: GetDetailedPoolDataBatchRequestABI.json
src/amm/curve/: batch_request.rs  mod.rs
src/amm/curve/batch_request/: GetCurvePoolDataBatchRequestABI.json  mod.rs
src/amm/erc_4626/: batch_request.rs  mod.rs
src/amm/erc_4626/batch_request/: mod.rs
src/amm/slipstream/: factory.rs  mod.rs
src/amm/slipstream/batch_request/: mod.rs
src/amm/uniswap_v2/: batch_request.rs  factory.rs  mod.rs
src/amm/uniswap_v2/batch_request/: GetUniV2PoolData.json  mod.rs
src/amm/uniswap_v3/: factory.rs  mod.rs
src/amm/uniswap_v3/batch_request/: GetUniV3PoolData.json  mod.rs
src/amm/ve33/: batch_request.rs  factory.rs  mod.rs
src/amm/ve33/batch_request/: mod.rs  (+1 more)
src/bindings/: bitmath.rs  fixedpoint96.rs  fixedpointmathlib.rs  fullmath.rs  getcamelotv3pooldatabatchrequest.rs  getcamelotv3tickdatabatchrequest.rs  getclpooltickbitmap.rs  getclpoolticks.rs  getclpoolticksinrange.rs  getcurvepoolbatchrequest.rs  getdetailedpooldatabatchrequest.rs  geterc4626vaultdatabatchrequest.rs  getuniswapv2pairsbatchrequest.rs  getuniswapv2pooldatabatchrequest.rs  getuniswapv3pooldatabatchrequest.rs  getuniswapv3tickdatabatchrequest.rs  getuniv2pooldata.rs  getuniv3pooldata.rs  getve33pooldata.rs  getve33pooldatabatchrequest.rs  getve33poolsbatchrequest.rs  getwethvalueinpoolbatchrequest.rs  iaerodromeclpool.rs  iaerodromepool.rs  icamelotv3pool.rs  icamelotv3poolstate.rs  icurvepool.rs  ierc20.rs  ierc4626vault.rs  ifactory.rs  ipool.rs  ipoolutils.rs  iuniswapv2factory.rs  iuniswapv2pair.rs  iuniswapv3factory.rs  iuniswapv3pool.rs  iuniswapv3poolstate.rs  libbit.rs  liquidityamounts.rs  mockerc20.rs  (+14 more)
src/discovery/: factory.rs
src/filters/: address.rs  mod.rs  value.rs
src/state_space/: collector.rs  mod.rs
src/sync/: checkpoint.rs  mod.rs
