[package]
name = "amms"
version = "0.6.3"
edition = "2021"
license = "MIT"
description = "A modified amms-rs"
readme = "README.md"
homepage = "https://github.com/dvisacker/amms"
repository = "https://github.com/dvisacker/amms"
keywords = ["ethereum", "amm", "mev"]
exclude = ["target/*", ".github/*", ".gitignore"]

[dependencies]
tokio = { workspace = true }
uniswap_v3_math = { workspace = true }
alloy = { workspace = true}
alloy-chains = { workspace = true }
tracing = { workspace = true }

db = { path = "../db" }
types = { path = "../types" }

arraydeque = { version = "0.5", optional = true }
async-trait = "0.1"
eyre = "0.6"
futures = "0.3"
lazy_static = "1.5"
num-bigfloat = "1.7"
regex = "1.10"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[features]
default = ["filters", "state-space"]
filters = []
state-space = ["arraydeque"]
artemis = []

[dev-dependencies]
rand = "0.8.5"
tracing-subscriber = "0.3"
criterion = "0.5"
tokio = { version = "1.40.0", default-features = false, features = [
    "rt-multi-thread",
] }

# [[bench]]
# name = "state_space"
# harness = false

# [[bench]]
# name = "uniswapv2_simulate"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
lto = true
codegen-units = 1
debug = "full"
