[package]
name = "amms"
version = "0.6.3"
edition = "2021"
license = "MIT"
description = "A modified amms-rs"
readme = "README.md"
homepage = "https://github.com/dvisacker/amms"
repository = "https://github.com/dvisacker/amms"
keywords = ["ethereum", "amm", "mev"]
exclude = ["target/*", ".github/*", ".gitignore"]

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
uniswap_v3_math = { git = "https://github.com/0xKitsune/uniswap-v3-math.git" }
alloy = { version = "0.11.0", features = ["full"] }
alloy-chains = "0.1.57"
tracing = "0.1.37"
async-recursion = "1.0.5"

db = { path = "../db" }
types = { path = "../types" }

# arraydeque = { version = "0.5", optional = true }
async-trait = "0.1"
eyre = "0.6"
futures = "0.3"
lazy_static = "1.5"
num-bigfloat = "1.7"
regex = "1.10"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[features]
default = ["filters", "state-space"]
filters = []
state-space = [] # state-space = ["arraydeque"]
artemis = []

[dev-dependencies]
dotenv = "0.15.0"
provider = { path = "../provider" }
rand = "0.9.0"
tracing-subscriber = "0.3"
criterion = "0.5"
tokio = { version = "1.40.0", default-features = false, features = [
    "rt-multi-thread",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0          # Basic optimizations for better dev experience
debug = "line-tables-only"         # Full debug info for development
incremental = true     # Faster recompilation
codegen-units = 16    # Parallel compilation
debug-assertions = true
overflow-checks = true
panic = "unwind"       # Enable stack traces
lto = false           # Faster compilation
rpath = false         # Don't embed library search paths